tdf#119392 write bitfield in <draw:layer-set> order

The view uses the SdrLayerIDSet bitfield in layer ID order.
But file format knows no layer IDs and on loading the
bitfield is interpreted in the layer order given by
<draw:layer-set> element. Therefore reorder the bits on
saving according <draw:layer-set>, which is order in
SdrLayerAdmin.

Change-Id: Id349dc7f42338e35ca8cc3b6409d061213b01691
Reviewed-on: https://gerrit.libreoffice.org/60178
Tested-by: Jenkins
Reviewed-by: Regina Henschel <rb.henschel@t-online.de>